--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-<title></title>
+<title>Mauricio Román Miranda</title>
 
 <!-- Bootstrap CSS CDN -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
@@ -56,11 +56,11 @@
         <!-- /#sidebar-wrapper -->
 
         <!-- Page Content -->
-        <div id="page-content-wrapper">
+        <!-- <div id="page-content-wrapper">
             <button type="button" class="hamburger animated fadeInLeft is-closed" data-toggle="offcanvas">
                 <span class="hamb-top"></span>
     			<span class="hamb-middle"></span>
-				<span class="hamb-bottom"></span>
+				<span class="hamb-bottom"></span> -->
             </button>
             <div class="container">
                 <div class="row">
@@ -69,7 +69,7 @@
                         <p></p>
                         <p></p>
                         <p></p>
-                        <p>Toda Cultura esta definida por el uso que le da a las tecnologías que la conforman.</p>
+                        <p><h1>Toda Cultura esta definida por el uso que le da a las tecnologías que la conforman.</h1></p>
                         <p></p>
                     </div>
                 </div>
