--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
         <!-- /#sidebar-wrapper -->
 
         <!-- Page Content -->
-        <!-- <div id="page-content-wrapper">
+        <div id="page-content-wrapper">
             <button type="button" class="hamburger animated fadeInLeft is-closed" data-toggle="offcanvas">
                 <span class="hamb-top"></span>
     			<span class="hamb-middle"></span>
-				<span class="hamb-bottom"></span> -->
+				<span class="hamb-bottom"></span>
             </button>
             <div class="container">
                 <div class="row">
