--- a/index.html
+++ b/index.html
@@ -69,10 +69,22 @@
                         <p></p>
                         <p></p>
                         <p></p>
+                        <p><h1></h1></p>
+                        <p></p>
+                    </div>
+                </div>
+		<div class="container">
+                <div class="row">
+                    <div class="col-lg-8 col-lg-offset-2">
+                        <h1></h1>
+                        <p></p>
+                        <p></p>
+                        <p></p>
                         <p><h1>Toda Cultura esta definida por el uso que le da a las tecnologías que la conforman.</h1></p>
                         <p></p>
                     </div>
                 </div>
+            </div>
             </div>
         </div>
         <!-- /#page-content-wrapper -->
