--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                         <p></p>
                         <p></p>
                         <p></p>
-                        <p><h1>Toda cultura esta definida por el uso que le da a las tecnologías que la conforman.</h1></p>
+                        <p><h1>Toda cultura está definida por el uso que le da a las tecnologías que la conforman.</h1></p>
                         <p></p>
                     </div>
                 </div>
