--- a/index.html
+++ b/index.html
@@ -3,12 +3,13 @@
   <style>
     #heading { color: #FFF; }
   </style>
-	
+  <style>
+</style>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 
-<title>Mauricio Román Miranda</title>
+<title></title>
 
 <!-- Bootstrap CSS CDN -->
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
@@ -24,7 +25,9 @@
 </head>
 
 
-<body style="background-color:black">
+<!-- <body style="background-color:black"> -->
+<body>
+
 
 
 <div id="wrapper">
@@ -60,12 +63,12 @@
         <!-- /#sidebar-wrapper -->
 
         <!-- Page Content -->
-        <div id="page-content-wrapper">
+    <div id="page-content-wrapper">
             <button type="button" class="hamburger animated fadeInLeft is-closed" data-toggle="offcanvas">
                 <span class="hamb-top"></span>
     			<span class="hamb-middle"></span>
 				<span class="hamb-bottom"></span>
-            </button>
+      </button>
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
@@ -77,25 +80,25 @@
                         <p></p>
                     </div>
                 </div>
-		<div class="container">
+            </div>
+            <div class="container">
                 <div class="row">
                     <div class="col-lg-8 col-lg-offset-2">
                         <h1></h1>
                         <p></p>
                         <p></p>
                         <p></p>
-                        <p><h1>Toda cultura está definida por el uso que le da a las tecnologías que la conforman.</h1></p>
+                        <p><h1 id="heading">Toda Cultura está definida por el uso que le da a las tecnologías que la conforman.</h1></p>
                         <p></p>
                     </div>
                 </div>
-            </div>
             </div>
         </div>
         <!-- /#page-content-wrapper -->
 
 </div>
 
-<script>$(document).ready(function () {
+<!-- <script>$(document).ready(function () {
   var trigger = $('.hamburger'),
       overlay = $('.overlay'),
      isClosed = false;
@@ -127,6 +130,7 @@
 
     <!-- /#wrapper -->
 
+    <!-- <a title="Jean Fouquet, Public domain, via Wikimedia Commons" href="https://commons.wikimedia.org/wiki/File:Jean_Fouquet-_Portrait_of_the_Ferrara_Court_Jester_Gonella.JPG"><img width="256" alt="Jean Fouquet- Portrait of the Ferrara Court Jester Gonella" src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/06/Jean_Fouquet-_Portrait_of_the_Ferrara_Court_Jester_Gonella.JPG/256px-Jean_Fouquet-_Portrait_of_the_Ferrara_Court_Jester_Gonella.JPG"></a> -->
 
     </body>
     </html>
