--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                         <p></p>
                         <p></p>
                         <p></p>
-                        <p><h1 id="heading">Toda Cultura está definida por el uso que le da a las tecnologías que la conforman.</h1></p>
+                        <p><h1 id="heading">Toda Cultura se define por el uso que le da a sus tecnologías y la forma de cómo las comparte o las somete.</h1></p>
                         <p></p>
                     </div>
                 </div>
