--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                         <p></p>
                         <p></p>
                         <p></p>
-                        <p><h1 id="heading">Toda Cultura se define por el uso que le da a sus tecnologías respecto a su cosmovisión y la forma en cómo las comparte y / o impone hacia otras culturas.</h1></p>
+                        <p><h1 id="heading">Toda Cultura se define por el uso que le da a sus tecnologías respecto a su cosmovisión y la forma en cómo las comparte o impone.</h1></p>
                         <p></p>
                     </div>
                 </div>
