--- a/index.html
+++ b/index.html
@@ -103,8 +103,8 @@
                         <i class="fas fa-align-justify"></i>
                     </button> -->
 
-                    <button class="btn  btn-dark d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                        <i class="fas fa-align-justify"></i>
+                    <!-- <button class="btn  btn-dark d-lg-none ml-auto" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                        <i class="fas fa-align-justify"></i> -->
                     </button>
 
                     <!-- <div class="collapse navbar-collapse" id="navbarSupportedContent">
