--- a/timereversal.html
+++ b/timereversal.html
@@ -8,11 +8,11 @@ p {
   text-align: center;
   font-size: 60px;
   margin-top: 300px;
-  color: #000;
+  color: #fff;
 }
 </style>
 </head>
-<body style="background-color:white">
+<body style="background-color:black">
 
 <p id="countdown"></p>
 
