--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
 
     <style>
       #heading { color: #FFF; }
+
+      p {
+        font-family: arial;
+        text-align: center;
+        font-size: 60px;
+        margin-top: 300px;
+        color: #fff;
+      }
+
     </style>
 
     <title>Mauricio Román</title>
@@ -35,9 +44,11 @@
             <ul class="list-unstyled components">
                 <p><a href="#">Mauricio Román</a></p>
                 <li class="active">
+                  <!--<a href="#"></a> -->
+                  <!--<a href="#">Toda cultura puede definirse según el uso que le da a sus tecnologías y la forma en cómo las comparte o impone.</a> -->
                     <!-- <a href="#"></a>
                     <a href="#"></a>
-                    <!-- <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Proyectos</a>
+                    <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Proyectos</a>
                     <ul class="collapse list-unstyled" id="homeSubmenu">
                         <li>
                             <a href="#">Bio</a>
@@ -133,11 +144,42 @@
                         <p></p>
                         <p></p>
                         <p></p>
-                        <p><h1 id="heading">Toda cultura puede definirse según el uso que le da a sus tecnologías y la forma en cómo las comparte o impone.</h1></p>
+                        <!-- <p><h1 id="heading">Toda cultura puede definirse según el uso que le da a sus tecnologías y la forma en cómo las comparte o impone.</h1></p>-->
+                        <p><h1><p id="countdown"></p>
+                        <script>
+                        var countDownDate = new Date("Mar 11, 2022 12:10:00").getTime();
+
+
+                        var x = setInterval(function() {
+
+
+                          var now = new Date().getTime();
+
+
+                          var distance = countDownDate - now;
+
+
+                          var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+                          var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+                          var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+                          var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+
+                          document.getElementById("countdown").innerHTML = days + "d " + hours + "h "
+                          + minutes + "m " + seconds + "s ";
+
+
+                          if (distance < 0) {
+                            clearInterval(x);
+                            document.getElementById("countdown").innerHTML = "NUNCA MÁS";
+                          }
+                        }, 1000);
+                        </script></h1></p>
                         <p></p>
                     </div>
                 </div>
             </div>
+
 
             <h2></h2>
             <p></p>
