--- a/index.html
+++ b/index.html
@@ -42,9 +42,9 @@
             </div>
 
             <ul class="list-unstyled components">
-                <p><a href="#">Mauricio Román</a></p>
+                <p><a href="#">Mauricix Román</a></p>
                 <li class="active">
-                  <!--<a href="#"></a> -->
+                  <!-- <p><a href="#"></a></p> -->
                   <!--<a href="#">Toda cultura puede definirse según el uso que le da a sus tecnologías y la forma en cómo las comparte o impone.</a> -->
                     <!-- <a href="#"></a>
                     <a href="#"></a>
@@ -67,7 +67,7 @@
                         </li>
                     </ul>
                 </li>
-                <!-- <li>
+                <li>
                     <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Pages</a>
                     <ul class="collapse list-unstyled" id="pageSubmenu">
                         <li>
@@ -81,12 +81,12 @@
                         </li>
                     </ul>
                 </li> -->
-                <li>
+                <!-- <li>
                     <a href="#"></a>
                 </li>
                 <li>
                     <a href="#"></a>
-                </li>
+                </li>-->
             </ul>
 
             <ul class="list-unstyled CTAs">
