--- a/timereversal.html
+++ b/timereversal.html
@@ -42,7 +42,7 @@ var x = setInterval(function() {
 
   if (distance < 0) {
     clearInterval(x);
-    document.getElementById("countdown").innerHTML = ""...El tiempo en reversa"";
+    document.getElementById("countdown").innerHTML = "NUNCA MÁS";
   }
 }, 1000);
 </script>
