--- a/timereversal.html
+++ b/timereversal.html
@@ -26,7 +26,7 @@ p {
 
   
 </head>
-<!-- <body style="background-color:black"> -->
+<body style="background-color:black">
 
 <p id="countdown"></p>
 
