--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
         color: #fff;
       }
 
+
     </style>
 
-    <title>Mauricio Román</title>
+    <title>X_X el arte de Mauricix Román</title>
 
     <!-- Bootstrap CSS CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
@@ -44,12 +45,9 @@
             <ul class="list-unstyled components">
                 <p><a href="#">Mauricix Román</a></p>
                 <li class="active">
-                  <!-- <p><a href="#"></a></p> -->
-                  <!--<a href="#">Toda cultura puede definirse según el uso que le da a sus tecnologías y la forma en cómo las comparte o impone.</a> -->
-                    <!-- <a href="#"></a>
-                    <a href="#"></a>
-                    <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Proyectos</a>
-                    <ul class="collapse list-unstyled" id="homeSubmenu">
+                  <p><a href="#"></a></p>
+                    <!-- <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Proyectos</a>
+                    <ul class="collapse list-unstyled" id="homeSubmenu"> -->
                         <li>
                             <a href="#">Bio</a>
                         </li>
@@ -67,7 +65,7 @@
                         </li>
                     </ul>
                 </li>
-                <li>
+                <!-- <li>
                     <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Pages</a>
                     <ul class="collapse list-unstyled" id="pageSubmenu">
                         <li>
@@ -144,8 +142,10 @@
                         <p></p>
                         <p></p>
                         <p></p>
-                        <!-- <p><h1 id="heading">Toda cultura puede definirse según el uso que le da a sus tecnologías y la forma en cómo las comparte o impone.</h1></p>-->
-                        <p><h1><p id="countdown"></p>
+                        <p><h1 id="heading">Toda cultura puede definirse según el uso que le da a sus tecnologías y la forma en cómo las comparte o impone.</h1></p>
+
+                        <!-- <p><h1><p id="countdown"></p>
+
                         <script>
                         var countDownDate = new Date("Mar 11, 2022 12:10:00").getTime();
 
@@ -174,7 +174,7 @@
                             document.getElementById("countdown").innerHTML = "NUNCA MÁS";
                           }
                         }, 1000);
-                        </script></h1></p>
+                      </script></h1></p> -->
                         <p></p>
                     </div>
                 </div>
