--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                   <p><a href="#"></a></p>
                     <!-- <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Proyectos</a>
                     <ul class="collapse list-unstyled" id="homeSubmenu"> -->
-                        <li>
+                        <!-- <li>
                             <a href="#">Bio</a>
                         </li>
                         <li>
@@ -58,13 +58,13 @@
                             <a href="#">Contacto</a>
                         </li>
                         <li>
-                            <a href="#"></a>
+                            <a href="#">@</a>
                         </li>
                         <li>
                             <a href="#"></a>
                         </li>
                     </ul>
-                </li>
+                </li> -->
                 <!-- <li>
                     <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Pages</a>
                     <ul class="collapse list-unstyled" id="pageSubmenu">
