--- a/timereversal.html
+++ b/timereversal.html
@@ -30,7 +30,7 @@ h2 {
 </style>
 <link rel="stylesheet" href="timestyle.css">
 </head>
-<body style="background-color:#fff">
+<body style="background-color:#000">
 
 <p id="cuentaprogresiva"></p>
 
