--- a/timereversal.html
+++ b/timereversal.html
@@ -61,7 +61,7 @@ var x = setInterval(function() {
 
 <p id="cuentaregresiva"></p>
 <script>
-var countDownDate = new Date("Sep 04, 2022 23:59:59").getTime();
+var countDownDate = new Date("Sep 04, 2022 12:10:00").getTime();
 
 var x = setInterval(function() {
 
@@ -79,7 +79,7 @@ var x = setInterval(function() {
 
   if (distance < 0) {
     clearInterval(x);
-    document.getElementById("cuentaregresiva").innerHTML = "Un Horizonte a la deriva";
+    document.getElementById("cuentaregresiva").innerHTML = "Un Horizonte a la deriva... Vamos por ancho camino <3";
   }
 }, 1000);
 </script>
