--- a/timereversal.html
+++ b/timereversal.html
@@ -60,7 +60,7 @@ var x = setInterval(function() {
 </script>
 
 <p id="cuentaregresiva"></p>
-<script>
+<!-- <script>
 var countDownDate = new Date("Sep 04, 2022 12:10:00").getTime();
 
 var x = setInterval(function() {
@@ -82,7 +82,7 @@ var x = setInterval(function() {
     document.getElementById("cuentaregresiva").innerHTML = "Un Horizonte a la deriva... Vamos por ancho camino <3";
   }
 }, 1000);
-</script>
+</script> -->
 
 </body>
 </html>
