--- a/index.html
+++ b/index.html
@@ -53,7 +53,11 @@
                         </li>
                         <li>
                             <a href="#">Proyectos</a>
+                        </li> -->
+                        <li>
+                            <a href="https://mauricixx.github.io/mycelia/">Mycelia</a>
                         </li>
+                 <!-- 
                         <li>
                             <a href="#">Contacto</a>
                         </li>
