--- a/index.html
+++ b/index.html
@@ -57,6 +57,12 @@
                         <li>
                             <a href="https://mauricixx.github.io/mycelia/">Mycelia</a>
                         </li>
+                        <li>
+                            <a href="https://mauricixx.github.io/timereversal">TimeReversal</a>
+                        </li>
+                <li>
+                    <a href="https://mauricixx.github.io/tralka">Tralka</a>
+                </li>
                  <!-- 
                         <li>
                             <a href="#">Contacto</a>
