--- a/tralka.html
+++ b/tralka.html
@@ -47,12 +47,12 @@
 <div class="topnav">
   <!-- <a class="active" href="https://rstartdas.github.io"><img src="https://rstartdas.github.io/img/rstart.logo.pq2.png" alt="rstart"></a> -->
   <!-- <a class="active" href="https://ia801400.us.archive.org/3/items/tralka-propuesta-creativa-mauricio-roman-miranda/TRALKA-propuesta_creativa_Mauricio_Roman_MIranda.mp4" alt="rstart"></a>  -->
-  <a href="https://github.com/rstartdas/"></a>
+  <!-- <a href="https://github.com/rstartdas/"></a>
   <a href="https://github.com/rstartdas/tralka"><</a>
-  <a href="https://github.com/rstartdas/tralka">Tralka</a>
+  <a href="https://github.com/rstartdas/tralka">Tralka</a> -->
 </div>
   
-  <div style="padding:75% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/597467578?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;h=847bec3fe9" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="TRALKA-propuesta_creativa_Mauricio_Roman_MIranda.mp4"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+  <div style="padding:75% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/597467578?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;h=847bec3fe9" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:80%;height:80%;" title="TRALKA-propuesta_creativa_Mauricio_Roman_MIranda.mp4"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
   
   
 <!-- <div class="videocontainer">
