--- a/tralka.html
+++ b/tralka.html
@@ -52,7 +52,7 @@
   <a href="https://github.com/rstartdas/tralka">Tralka</a> -->
 </div>
   
-  <div style="padding:center 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/597467578?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;h=847bec3fe9" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:60%;height:60%;" title="TRALKA-propuesta_creativa_Mauricio_Roman_MIranda.mp4"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+  <div style="padding:75% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/597467578?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;h=847bec3fe9" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:60%;height:60%;" title="TRALKA-propuesta_creativa_Mauricio_Roman_MIranda.mp4"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
   
   
 <!-- <div class="videocontainer">
