--- a/index.html
+++ b/index.html
@@ -63,6 +63,9 @@
                 <li>
                     <a href="https://mauricixx.github.io/tralka">Tralka</a>
                 </li>
+                <li>
+                    <a href="">Bionerxs</a>
+                </li>
                  <!-- 
                         <li>
                             <a href="#">Contacto</a>
