--- a/bionerxs.html
+++ b/bionerxs.html
@@ -48,7 +48,7 @@
   padding:16px 16px;
   float: center;
   height: 1920px;
-  background-color: silver;
+  background-color: black;
 }
 </style>
 
@@ -77,7 +77,7 @@
 
 <!-- x_x /rstart  html -->
 <!-- <body id="page-top" style="background-color:black"> -->
-<body style="background-color:silver">
+<body style="background-color:black">
 
  <!-- <div><a href="https://rstartdas.github.io"><img src="img/rstart.logo.pq2.png" alt="rstart"></a></div> -->
 
@@ -98,7 +98,8 @@
     <!-- Navigation -->
     <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
       <div class="container">
-        <a class="navbar-brand js-scroll-trigger" href="https://github.com/rstartdas"><img src="img/rstart.logo.pq2.png" alt="rstart"></a>
+        <a class="navbar-brand js-scroll-trigger" href=""><img src="" alt=""></a>
+                <!-- <a class="navbar-brand js-scroll-trigger" href="https://github.com/rstartdas"><img src="img/rstart.logo.pq2.png" alt="rstart"></a> -->
     <!--<a class="navbar-brand js-scroll-trigger" href="#page-top"><img src="img/rstart.logo.pq2.png" alt="rstart"></a> -->
         <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
           rstart
