--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <a href="https://mauricixx.github.io/tralka">Tralka</a>
                 </li>
                 <li>
-                    <a href="">Bionerxs</a>
+                    <a href="https://mauricixx.github.io/bionerxs">Bionerxs</a>
                 </li>
                  <!-- 
                         <li>
