--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
 
             <ul class="list-unstyled components">
-                <p><a href="#">Mauricix Román - Poética Computacional en Tiempo Real.</a></p>
+                <p><a href="#">Mauricix Román</a></p>
                 <li class="active">
                   <p><a href="#"></a></p>
                     <!-- <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Proyectos</a>
@@ -54,6 +54,9 @@
                         <li>
                             <a href="#">Proyectos</a>
                         </li> -->
+                    <li>
+                        <a href="#">Poética Computacional en Tiempo Real.</a>
+                </li>
                         <li>
                             <a href="https://mauricixx.github.io/mycelia/">Mycelia</a>
                         </li>
