--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                             <a href="#">Proyectos</a>
                         </li> -->
                     <li>
-                        <a href="#">Poética Computacional en Tiempo Real.</a>
+                        <a href="#"></a>
                 </li>
                         <li>
                             <a href="https://mauricixx.github.io/mycelia/">Mycelia</a>
