--- a/index.html
+++ b/index.html
@@ -60,12 +60,12 @@
                         <li>
                             <a href="https://mauricixx.github.io/mycelia/">Mycelia</a>
                         </li>
-                <li>
-                    <a href="https://mauricixx.github.io/mitiempo.html">MiTiempo</a>
-                </li>
                         <li>
-                            <a href="https://mauricixx.github.io/timereversal">TimeReversal</a>
+                            <a href="https://mauricixx.github.io/timereversal">El Tiempo en Reversa</a>
                         </li>
+                <li>
+                    <a href="https://mauricixx.github.io/mitiempo.html">MiTiempo <<.</a>
+                </li>
                 <li>
                     <a href="https://mauricixx.github.io/tralka">Tralka</a>
                 </li>
