--- a/tralka.html
+++ b/tralka.html
@@ -10,7 +10,7 @@
 .topnav {
   overflow: hidden;
   height: 55px;
-  background-color: #17334F;
+  background-color: silver;
 }
 
 .topnav a {
@@ -37,7 +37,7 @@
   padding:16px 16px;
   float: center;
   height: 850px;
-  background-color: black;
+  background-color: silver;
 }  
   
 </style>
