--- a/tralka.html
+++ b/tralka.html
@@ -10,7 +10,7 @@
 .topnav {
   overflow: hidden;
   height: 55px;
-  background-color: silver;
+  background-color: black;
 }
 
 .topnav a {
@@ -52,7 +52,11 @@
   <a href="https://github.com/rstartdas/tralka">Tralka</a> -->
 </div>
   
-  <div style="padding:75% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/597467578?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;h=847bec3fe9" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:60%;height:60%;" title="TRALKA-propuesta_creativa_Mauricio_Roman_MIranda.mp4"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+  <!-- <div style="padding:75% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/597467578?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;h=847bec3fe9" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:60%;height:60%;" title="TRALKA-propuesta_creativa_Mauricio_Roman_MIranda.mp4"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script> -->
+  
+  <div style="padding:75% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/597467578?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;h=847bec3fe9" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:90%;height:90%;" title="TRALKA-propuesta_creativa_Mauricio_Roman_Miranda.mp4"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+  <div style="padding:62.5% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/819178297?h=69567626ee&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Un Rayo... M&amp;uacute;ltiple... Fractales"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
+  <div style="padding:62.5% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/819164671?h=6ad8270efd&amp;badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:100%;height:100%;" title="Tralka_PD_Live_Touch"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script>
   
   
 <!-- <div class="videocontainer">
