--- a/tralka.html
+++ b/tralka.html
@@ -42,6 +42,7 @@
   
 </style>
 </head>
+<div><a href=""><img src="" alt="">Tralka, el valle del trueno.</a></div> -->
 <!-- <div><a href="https://rstartdas.github.io"><img src="https://rstartdas.github.io/img/rstart.logo.pq2.png" alt="rstart"></a></div> -->
 <body id="page-top" style="background-color:silver">
 <div class="topnav">
