--- a/tralka.html
+++ b/tralka.html
@@ -41,6 +41,8 @@
 }  
   
 </style>
+      <link rel="stylesheet" href="style.css">
+
 </head>
 <!-- <div><a href="https://rstartdas.github.io"><img src="https://rstartdas.github.io/img/rstart.logo.pq2.png" alt="rstart"></a></div> -->
 <body id="page-top" style="background-color:silver">
