--- a/tralka.html
+++ b/tralka.html
@@ -10,12 +10,12 @@
 .topnav {
   overflow: hidden;
   height: 55px;
-  background-color: silver;
+  background-color: transparent;
 }
 
 .topnav a {
   float: left;
-  color: #f2f2f2;
+  color: #fff;
   text-align: center;
   padding:10px 16px;
   text-decoration: none;
