--- a/tralka.html
+++ b/tralka.html
@@ -24,7 +24,7 @@
 
 .topnav a:hover {
   background-color: #000;
-  color: #4CAF55;
+  color: #fff;
 }
 
 .topnav a.active {
@@ -37,7 +37,7 @@
   padding:16px 16px;
   float: center;
   height: 850px;
-  background-color: silver;
+  background-color: transparent;
 }  
   
 </style>
@@ -47,7 +47,7 @@
 <!-- <div><a href="https://rstartdas.github.io"><img src="https://rstartdas.github.io/img/rstart.logo.pq2.png" alt="rstart"></a></div> -->
 <body id="page-top" style="background-color:silver">
 <div class="topnav">
-  <div><a href=""><img src="" alt=""></a>Tralka, el valle del trueno.</div>
+  <!-- <div><a href=""><img src="" alt=""></a>Tralka, el valle del trueno.</div> -->
   <!-- <a class="active" href="https://rstartdas.github.io"><img src="https://rstartdas.github.io/img/rstart.logo.pq2.png" alt="rstart"></a> -->
   <!-- <a class="active" href="https://ia801400.us.archive.org/3/items/tralka-propuesta-creativa-mauricio-roman-miranda/TRALKA-propuesta_creativa_Mauricio_Roman_MIranda.mp4" alt="rstart"></a>  -->
   <!-- <a href="https://github.com/rstartdas/"></a>
