--- a/timereversal.html
+++ b/timereversal.html
@@ -59,6 +59,7 @@ var x = setInterval(function() {
 }, 1000);
 </script>
 
+  <!--
 <p id="cuentaregresiva"></p>
 <script>
 var countDownDate = new Date("Sep 04, 2022 12:10:00").getTime();
@@ -82,7 +83,7 @@ var x = setInterval(function() {
     document.getElementById("cuentaregresiva").innerHTML = "Un Horizonte a la deriva... Vamos por ancho camino <3";
   }
 }, 1000);
-</script>
+</script> -->
 
 </body>
 </html>
