--- a/timereversal.html
+++ b/timereversal.html
@@ -34,7 +34,7 @@ h2 {
 
 <p id="cuentaprogresiva"></p>
 
-<script>
+<!-- <script>
 var start_at = new Date('Sep, 11, 1973 12:10:00').getTime();
 
 var x = setInterval(function() {
@@ -56,6 +56,31 @@ var x = setInterval(function() {
       document.getElementById("cuentaprogresiva").innerHTML = days + "d " + hours + "h "
       + minutes + "m " + seconds + "s ";
     }
+}, 1000);
+</script> -->
+
+<p id="cuentaregresiva"></p>
+<script>
+var countDownDate = new Date("Sep 04, 2022 12:10:00").getTime();
+
+var x = setInterval(function() {
+
+  var now = new Date().getTime();
+
+  var distance = countDownDate - now;
+
+  var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+  var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+  var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+  var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+
+  document.getElementById("cuentaregresiva").innerHTML = days + "d " + hours + "h "
+  + minutes + "m " + seconds + "s ";
+
+  if (distance < 0) {
+    clearInterval(x);
+    document.getElementById("cuentaregresiva").innerHTML = "Nunca Más";
+  }
 }, 1000);
 </script>
 
