--- a/tralka.html
+++ b/tralka.html
@@ -33,6 +33,10 @@
 }
   
 .videocontainer {
+    display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
   overflow: hidden;
   padding:16px 16px;
   float: center;
