--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<meta http-equiv="refresh" content="1;url=http://mauricioroman.cl/" />
+<!-- <meta http-equiv="refresh" content="1;url=http://mauricioroman.cl/" /> -->
 <html>
 
 <head>
