--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
 
             <ul class="list-unstyled components">
-                <p><a href="#">Mauricix Román</a></p>
+                <p><a href="#">Maurici0 Román</a></p>
                 <li class="active">
                   <p><a href="#"></a></p>
                     <!-- <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Proyectos</a>
@@ -65,7 +65,7 @@
                             <a href="https://mauricixx.github.io/timereversal">El Tiempo en Reversa</a>
                         </li>
                 <li>
-                    <a href="https://mauricixx.github.io/mitiempo.html">MiTiempo <<.</a>
+                    <!-- <a href="https://mauricixx.github.io/mitiempo.html">MiTiempo <<.</a> -->
                 </li>
                 <li>
                     <a href="https://mauricixx.github.io/tralka">Tralka</a>
