--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
 
             <ul class="list-unstyled components">
-                <p><a href="#">Maurici0 Román</a></p>
+                <p><a href="#">Mauricio Román</a></p>
                 <li class="active">
                   <p><a href="#"></a></p>
                     <!-- <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Proyectos</a>
