--- a/index.html
+++ b/index.html
@@ -49,14 +49,14 @@
                   <p><a href="#"></a></p>
                     <!-- <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Proyectos</a>
                     <ul class="collapse list-unstyled" id="homeSubmenu"> -->
-                        <!-- <li>
-                            <a href="#">Bio</a>
+                        <<li>
+                            <a href="https://mauricixx.github.io/Bio_MR.pdf">Bio</a>
                         </li>
                         <li>
-                            <a href="#">Proyectos</a>
+                            <!-- <a href="#">Proyectos</a>
                         </li> -->
                     <li>
-                        <a href="#"></a>
+                        <a href="https://mauricixx.github.io/Bio_MR.pdf">Bio</a>
                 </li>
                         <li>
                             <a href="https://mauricixx.github.io/mycelia/">Mycelia</a>
