--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <p><a href="#">Mauricio Román</a></p>
                 <li class="active">
                   <p><a href="#"></a></p>
-                    <!-- <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Proyectos</a>
+                    <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Proyectos</a>
                     <ul class="collapse list-unstyled" id="homeSubmenu"> -->
                         <<li>
                             <a href="https://mauricixx.github.io/Bio_MR.pdf">Bio</a>
