--- a/index.html
+++ b/index.html
@@ -46,18 +46,18 @@
             <ul class="list-unstyled components">
                 <p><a href="#">Mauricio Román</a></p>
                 <li class="active">
-                  <p><a href="#"></a></p>
+                  <p><a href="https://mauricixx.github.io/Bio_MR.pdf">Bio</a></p>
                     <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Proyectos</a>
                     <ul class="collapse list-unstyled" id="homeSubmenu"> -->
-                        <<li>
+                        <!--<li>
                             <a href="https://mauricixx.github.io/Bio_MR.pdf">Bio</a>
                         </li>
                         <li>
                             <!-- <a href="#">Proyectos</a>
                         </li> -->
-                    <li>
+                    <!-- <li>
                         <a href="https://mauricixx.github.io/Bio_MR.pdf">Bio</a>
-                </li>
+                </li> -->
                         <li>
                             <a href="https://mauricixx.github.io/mycelia/">Mycelia</a>
                         </li>
