--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
             <ul class="list-unstyled components">
                 <p><a href="#">Mauricio Román</a></p>
                 <li class="active">
-                  <p><a href="https://mauricixx.github.io/Bio_MR.pdf">Bio</a></p>
-                    <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Proyectos</a>
+                  <p><a href=""></a></p>
+                    <!-- <a href="#homeSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">Proyectos</a>
                     <ul class="collapse list-unstyled" id="homeSubmenu"> -->
                         <!--<li>
                             <a href="https://mauricixx.github.io/Bio_MR.pdf">Bio</a>
@@ -55,9 +55,9 @@
                         <li>
                             <!-- <a href="#">Proyectos</a>
                         </li> -->
-                    <!-- <li>
+                    <li>
                         <a href="https://mauricixx.github.io/Bio_MR.pdf">Bio</a>
-                </li> -->
+                </li>
                         <li>
                             <a href="https://mauricixx.github.io/mycelia/">Mycelia</a>
                         </li>
