--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <!-- <a href="https://mauricixx.github.io/mitiempo.html">MiTiempo <<.</a> -->
                 </li>
                 <li>
-                    <a href="https://mauricixx.github.io/tralka">Tralka</a>
+                    <a href="https://mauricixx.github.io/tralka">Tralka-Tiempo-Trueno</a>
                 </li>
                 <li>
                     <a href="https://mauricixx.github.io/bionerxs">Bionerxs</a>
