--- a/index.html
+++ b/index.html
@@ -58,6 +58,12 @@
                     <li>
                         <a href="https://mauricixx.github.io/Bio_MR.pdf">Bio</a>
                 </li>
+                <!-- <li>
+                    <a href="https://mauricixx.github.io/tralka">Metron (en proceso)</a>
+                </li> -->
+                <li>
+                    <a href="https://mauricixx.github.io/tralka">Tralka-Tiempo-Trueno</a>
+                </li>
                         <li>
                             <a href="https://mauricixx.github.io/mycelia/">Mycelia</a>
                         </li>
@@ -66,9 +72,6 @@
                         </li>
                 <li>
                     <!-- <a href="https://mauricixx.github.io/mitiempo.html">MiTiempo <<.</a> -->
-                </li>
-                <li>
-                    <a href="https://mauricixx.github.io/tralka">Tralka-Tiempo-Trueno</a>
                 </li>
                 <li>
                     <a href="https://mauricixx.github.io/bionerxs">Bionerxs</a>
