--- a/tralka.html
+++ b/tralka.html
@@ -67,7 +67,7 @@
 </div>
   
   <!-- <div style="padding:75% 0 0 0;position:relative;"><iframe src="https://player.vimeo.com/video/597467578?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479&amp;h=847bec3fe9" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" allowfullscreen style="position:absolute;top:0;left:0;width:60%;height:60%;" title="TRALKA-propuesta_creativa_Mauricio_Roman_MIranda.mp4"></iframe></div><script src="https://player.vimeo.com/api/player.js"></script> -->
-<img src="https://raw.githubusercontent.com/mauricixx/mauricixx.github.io/refs/heads/main/img/Tralka-Tiempo_16BVAE_p.png" alt="Tralka-Tiempo-Trueno. 16 Bienal de Video y Artes Electronicas. Santiago, Chile." width="920" height="518">>
+<img src="https://raw.githubusercontent.com/mauricixx/mauricixx.github.io/refs/heads/main/img/Tralka-Tiempo_16BVAE_p.png" alt="Tralka-Tiempo-Trueno. 16 Bienal de Video y Artes Electronicas. Santiago, Chile." width="920" height="518" class="center">
 
   
 <iframe src="https://player.vimeo.com/video/819178297?badge=0&amp;autopause=0&amp;player_id=0&amp;app_id=58479" width="720" height="450" frameborder="0" allow="autoplay; fullscreen; picture-in-picture" title="Un Rayo... Múltiple... Fractales" class="center"></iframe>
